updated model definition to keras 2 API

--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -11,11 +11,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "/usr/local/lib/python2.7/dist-packages/ipykernel/__main__.py:45: UserWarning: The `merge` function is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
-      "/usr/local/lib/python2.7/dist-packages/keras/legacy/layers.py:460: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
-      "  name=name)\n",
-      "/usr/local/lib/python2.7/dist-packages/ipykernel/__main__.py:47: UserWarning: Update your `Model` call to the Keras 2 API: `Model(outputs=Tensor(\"de..., inputs=[<tf.Tenso...)`\n"
+      "/usr/local/lib/python3.5/dist-packages/ipykernel/__main__.py:45: UserWarning: The `merge` function is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
+      "/usr/local/lib/python3.5/dist-packages/keras/legacy/layers.py:458: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
+      "  name=name)\n"
      ]
     },
     {
@@ -24,7 +22,7 @@
        "38951745"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +74,7 @@
     "L1_distance = lambda x: K.abs(x[0]-x[1])\n",
     "both = merge([encoded_l,encoded_r], mode = L1_distance, output_shape=lambda x: x[0])\n",
     "prediction = Dense(1,activation='sigmoid',bias_initializer=b_init)(both)\n",
-    "siamese_net = Model(input=[left_input,right_input],output=prediction)\n",
+    "siamese_net = Model(inputs=[left_input,right_input],outputs=prediction)\n",
     "#optimizer = SGD(0.0004,momentum=0.6,nesterov=True,decay=0.0003)\n",
     "\n",
     "optimizer = Adam(0.00006)\n",
@@ -96,19 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "training alphabets\n",
-      "['Alphabet_of_the_Magi', 'Cyrillic', 'Gujarati', 'Japanese_(katakana)', 'Sanskrit', 'Japanese_(hiragana)', 'Korean', 'Mkhedruli_(Georgian)', 'Ojibwe_(Canadian_Aboriginal_Syllabics)', 'Latin', 'Early_Aramaic', 'Grantha', 'Asomtavruli_(Georgian)', 'Futurama', 'Bengali', 'Armenian', 'Anglo-Saxon_Futhorc', 'Tifinagh', 'Balinese', 'Braille', 'Greek', 'Tagalog', 'N_Ko', 'Blackfoot_(Canadian_Aboriginal_Syllabics)', 'Arcadian', 'Malay_(Jawi_-_Arabic)', 'Inuktitut_(Canadian_Aboriginal_Syllabics)', 'Burmese_(Myanmar)', 'Hebrew', 'Syriac_(Estrangelo)']\n",
-      "validation alphabets:\n",
-      "['Atemayar_Qelisayer', 'ULOG', 'Sylheti', 'Angelic', 'Glagolitic', 'Aurek-Besh', 'Oriya', 'Avesta', 'Kannada', 'Tengwar', 'Keble', 'Mongolian', 'Gurmukhi', 'Ge_ez', 'Malayalam', 'Atlantean', 'Old_Church_Slavonic_(Cyrillic)', 'Tibetan', 'Syriac_(Serto)', 'Manipuri']\n"
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-a4fc1b1812c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m\"/home/soren/keras-oneshot/train.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m\"/home/soren/keras-oneshot/val.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[0mXval\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcval\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python3.5/dist-packages/dill/dill.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m    284\u001b[0m     \u001b[0mpik\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUnpickler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    285\u001b[0m     \u001b[0mpik\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_main\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_main_module\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 286\u001b[1;33m     \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpik\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    287\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__module__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_main_module\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__name__'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    288\u001b[0m         \u001b[1;31m# point obj class to main\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/lib/python3.5/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m    319\u001b[0m         \u001b[1;31m# decode input (taking the buffer into account)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 321\u001b[1;33m         \u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconsumed\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_buffer_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    322\u001b[0m         \u001b[1;31m# keep undecoded input until the next call\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    323\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mconsumed\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte"
      ]
     }
    ],
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -216,22 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHgAAADuCAYAAADyW8OMAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABypJREFUeJztnUuS5SYQRcHhJbwet/ZQ3v8K6i2ixq494ImJUiv0ISET\nZV7dM3E4Wg+BDqQAAZVLKYng8tfdGSC2UDA4FAwOBYNDweBQMDgUDA4Fg0PB4Pwtufj1epVlWYyy\nQiS83+/vUsqvq+tEgpdlSZ+fn/25ImrknL9armOIBoeCwaFgcCgYHAoGh4LBoWBwKBgcCgaHgsGh\nYHAoGBwKBoeCwaFgcCgYHAoGh4LBoWBwKBgcCgaHgsGhYHAoGBwKBoeCwaFgcCgYHAoGR7S7cAY5\n5z/+nwe1jcEWDA4Fg+MuRN8N2ivCveCcs+pD3gpEx73glPokP03kESEEp0RhvbjrZEV/53nDnWCi\ni8sQXUoxDclnUQLtVeBScEo/Eo4eOEN5GwzR4LgXfNRS0UKpFe4Fp8RwPEIIwaSf0IIZpq8JI5hh\nuo8wgkkfFAxOeMF8D58TSjDfw3JCCSZyKBgcCgaHgsGhYHAoGBwKBoeCwaFgcCh4BeK0JwWDQ8En\nIMx9U/D/oO0qrFAwOBQMDgWDE0ow4jDGmlCCrUCuOOEFW/R2UXrQKQUSjNzKLAkjeK9VabQ09IoT\nRnBKfwpFCqOWuN0AfoT1kUpoFSdUCyZyKBicxwpG71xVHiv4KYTrZPXQ2lrROlgpAQt+Sgi+AjJE\nU+4PcIJ75SKG55SAQ3QrqGIrUIKvWi+6zD1gBJ/JfaLYSnjBbLXnhO5kUe41YVswQ3IbIVsw5bYT\nUjBpJ2SI3h75z1Z7TEjBKVFqKwzR4FAwOBQMDgWDQ8HgUDA4WTLcyDn/m1L6sssOEfC7lPLr6iKR\nYBIPhmhwKBgcCgaHgsGhYHAoGBwKBoeCwaFgcCgYHAoGh4LBoWBwKBgcCgaHgsGhYHBEOxter1dZ\nlsUoK0TC+/3+blmyIxK8LEv6/PzszxVRI+fctDaOIVpItCOaHiU4mhwN3OwuzDk/Ysfg7HO8TAQ/\nRVYPPc8l59z9TE1C9HaDtjaooXZbrrVYdy24/rc1Y7VSXF0vkbt3bYRj/GseNfKlKlgzYxppb6/d\nq0BXFaa1klzdW4Lm81MTrCF377eWlaaFlkqy/re939yJimCrgmmna/XgPYqtDAteF06r92zxwCx6\n9pr5tBp5DAve/rGq3kLPPBapPszR3rhWPi1HBerDpFpoaabrUMCqg3bUufISVq3yYTYO9oL3YZH1\npJDZVKXmO7mHqxZq2eGSjOWtn4+buWhtLMfiLWPns/vPrPSmgj2FQg0iludRnwufCAWDQ8HghBGM\n+onQmjCCSR8hBdcP4eSaUILXYiMOWVrRrLym4+BRGduC9q5nGvl9TePst56nQ81nsrSkjK5G1GgV\nR2lorBLpvdcV7qYq161FM1SNrjTRnFdvmavWupe7d3BL4e/oYLV8Px5Z3mqFeQseKfD2ofa80zU7\nZZHWYlWmvIOlHZ29zlVvRVmHey+rPbe/D/k9eM26AC0PRHMpTE1rZDnROr31773LTemGTtbsMHYk\nuQctses0Wq4buY+7TpaUs07XXm/c8l1skc5opXQ3TDqjZ0JBs9VpcrbIf4/elhxG8KgY7c6WxZqz\no/H/o0O0FOudjxpoVprHCU7JT5iegalg9AcZoXyPbMFPgoLBCSnYeyfJEyEFozDjy5jJEQ5XeN5P\nO5M6ZLMsy/Qd/lo1tmf/sccKcTUuH823iuDWDPSckGPV2mfu8OtBq0K6/Zp0NIesOdVYkaQpqaSS\nsmpOT66ZJnjkg33PuVuS+0rmlUcf/PY+1pFkiuDRVnf3ZnJtjqTuyR8ts+t10dt0pAX2WCmuVrJo\n59n0KEOtDtI6LekRCa1YjQBGI9coro8y3EuvpZZbtdoZ0UC7FauOg1OyabVbvIVdbTQlDwm26AF6\nfG9Gpkuw1fomyv1BrcEIe6VF8+abtClXQM75XUr55+o60dekj4+P0B2YJ8LPheBQMDgUDA4Fg0PB\n4DxWcJSFe6P57J7Jkt5YezJ/5lcly41rbjeA37EC4q7JkJZ1U9vrpWm7XnR3hKctm3uCpPm7qqza\nG9tcf/C3+HQoDctr9hbdSfNmOYtn1YqHO1l7i7e9tNxSbP6KyxGjJwpZoPZ3k2rhvHw0mJ0H7V65\n1nNUGyZ5knsXHsuuIni9/SLK+FIT7YqtmZ7KOziln9o7Q3KtUDMr09ED9xqaKyZbV3rC9dn162Wz\ne/e7C8vVo1oMr8k6y1BvbdTexmE1AzWa9oz9UWZTlT17iWa10N4tMGt68zh709tQC27dy9O6P2gG\nve9MrTA8+/ViPhctvdYCL1tF77h3mJPuRri7gt3JY78HP4WuddHEBfrrokk8KBgcCgaHgsGhYHAo\nGBwKBoeCwaFgcCgYHAoGh4LBoWBwKBgcCgaHgsGhYHAoGBwKBke6qvI7pfRlkREi5nfLRaJFdyQe\nDNHgUDA4FAwOBYNDweBQMDgUDA4Fg0PB4PwHkCHnyOTmldMAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7ff521e6bad0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def concat_images(X):\n",
@@ -402,21 +392,21 @@
  "metadata": {
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
