--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/ipykernel/__main__.py:45: UserWarning: The `merge` function is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
-      "/usr/local/lib/python3.5/dist-packages/keras/legacy/layers.py:458: UserWarning: The `Merge` layer is deprecated and will be removed after 08/2017. Use instead layers from `keras.layers.merge`, e.g. `add`, `concatenate`, etc.\n",
-      "  name=name)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "38951745"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +28,7 @@
     "import numpy.random as rng\n",
     "import numpy as np\n",
     "import os\n",
-    "import dill as pickle\n",
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
     "\n",
@@ -67,15 +58,16 @@
     "convnet.add(Conv2D(256,(4,4),activation='relu',kernel_initializer=W_init,kernel_regularizer=l2(2e-4),bias_initializer=b_init))\n",
     "convnet.add(Flatten())\n",
     "convnet.add(Dense(4096,activation=\"sigmoid\",kernel_regularizer=l2(1e-3),kernel_initializer=W_init,bias_initializer=b_init))\n",
-    "#encode each of the two inputs into a vector with the convnet\n",
+    "\n",
+    "#call the convnet Sequential model on each of the input tensors so params will be shared\n",
     "encoded_l = convnet(left_input)\n",
     "encoded_r = convnet(right_input)\n",
-    "#merge two encoded inputs with the l1 distance between them\n",
-    "L1_distance = lambda x: K.abs(x[0]-x[1])\n",
-    "both = merge([encoded_l,encoded_r], mode = L1_distance, output_shape=lambda x: x[0])\n",
-    "prediction = Dense(1,activation='sigmoid',bias_initializer=b_init)(both)\n",
+    "#layer to merge two encoded inputs with the l1 distance between them\n",
+    "L1_layer = Lambda(lambda tensors:K.abs(tensors[0] - tensors[1]))\n",
+    "#call this layer on list of two input tensors.\n",
+    "L1_distance = L1_layer([encoded_l, encoded_r])\n",
+    "prediction = Dense(1,activation='sigmoid',bias_initializer=b_init)(L1_distance)\n",
     "siamese_net = Model(inputs=[left_input,right_input],outputs=prediction)\n",
-    "#optimizer = SGD(0.0004,momentum=0.6,nesterov=True,decay=0.0003)\n",
     "\n",
     "optimizer = Adam(0.00006)\n",
     "#//TODO: get layerwise learning rates and momentum annealing scheme described in paperworking\n",
@@ -94,30 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-a4fc1b1812c4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m\"/home/soren/keras-oneshot/train.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[1;34m\"/home/soren/keras-oneshot/val.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"r\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m(\u001b[0m\u001b[0mXval\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcval\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/usr/local/lib/python3.5/dist-packages/dill/dill.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m    284\u001b[0m     \u001b[0mpik\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUnpickler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    285\u001b[0m     \u001b[0mpik\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_main\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_main_module\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 286\u001b[1;33m     \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpik\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    287\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__module__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_main_module\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__name__'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    288\u001b[0m         \u001b[1;31m# point obj class to main\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/usr/lib/python3.5/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m    319\u001b[0m         \u001b[1;31m# decode input (taking the buffer into account)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 321\u001b[1;33m         \u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconsumed\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_buffer_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfinal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    322\u001b[0m         \u001b[1;31m# keep undecoded input until the next call\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    323\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuffer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mconsumed\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training alphabets\n",
+      "dict_keys(['Ojibwe_(Canadian_Aboriginal_Syllabics)', 'Cyrillic', 'Latin', 'Asomtavruli_(Georgian)', 'Alphabet_of_the_Magi', 'Armenian', 'Grantha', 'Japanese_(hiragana)', 'N_Ko', 'Japanese_(katakana)', 'Sanskrit', 'Anglo-Saxon_Futhorc', 'Malay_(Jawi_-_Arabic)', 'Tifinagh', 'Early_Aramaic', 'Bengali', 'Burmese_(Myanmar)', 'Futurama', 'Hebrew', 'Syriac_(Estrangelo)', 'Braille', 'Inuktitut_(Canadian_Aboriginal_Syllabics)', 'Balinese', 'Tagalog', 'Mkhedruli_(Georgian)', 'Blackfoot_(Canadian_Aboriginal_Syllabics)', 'Korean', 'Gujarati', 'Arcadian', 'Greek'])\n",
+      "validation alphabets:\n",
+      "dict_keys(['Atlantean', 'Sylheti', 'Angelic', 'Old_Church_Slavonic_(Cyrillic)', 'Manipuri', 'Oriya', 'Malayalam', 'Avesta', 'Syriac_(Serto)', 'Glagolitic', 'Aurek-Besh', 'ULOG', 'Keble', 'Ge_ez', 'Kannada', 'Gurmukhi', 'Mongolian', 'Tengwar', 'Tibetan', 'Atemayar_Qelisayer'])\n"
      ]
     }
    ],
    "source": [
-    "with open( \"/home/soren/keras-oneshot/train.pickle\",\"r\") as f:\n",
+    "PATH = \"/home/soren/Desktop/keras-oneshot\" #CHANGE THIS - path where the pickled data is stored\n",
+    "\n",
+    "with open(os.path.join(PATH, \"train.pickle\"), \"rb\") as f:\n",
     "    (X,c) = pickle.load(f)\n",
     "\n",
-    "with open( \"/home/soren/keras-oneshot/val.pickle\",\"r\") as f:\n",
+    "with open(os.path.join(PATH, \"val.pickle\"), \"rb\") as f:\n",
     "    (Xval,cval) = pickle.load(f)\n",
     "    \n",
     "print(\"training alphabets\")\n",
@@ -128,28 +119,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\n"
+     ]
+    }
+   ],
    "source": [
     "class Siamese_Loader:\n",
     "    \"\"\"For loading batches and testing tasks to a siamese net\"\"\"\n",
-    "    def __init__(self, path):\n",
+    "    def __init__(self, path, data_subsets = [\"train\", \"val\"]):\n",
     "        self.data = {}\n",
     "        self.categories = {}\n",
     "        self.info = {}\n",
-    "        with open(os.path.join(path,\"train.pickle\"),\"r\") as f:\n",
-    "            (X,c) = pickle.load(f)\n",
-    "            self.data[\"train\"] = X\n",
-    "            self.categories[\"train\"] = c\n",
-    "        with open(os.path.join(path,\"val.pickle\"),\"r\") as f:\n",
-    "            (X,c) = pickle.load(f)\n",
-    "            self.data[\"val\"] = X\n",
-    "            self.categories[\"val\"] = c\n",
-    "            \n",
+    "        for name in data_subsets:\n",
+    "            with open(os.path.join(path, name+\".pickle\"),\"rb\") as f:\n",
+    "                (X,c) = pickle.load(f)\n",
+    "                self.data[name] = X\n",
+    "                self.categories[name] = c\n",
+    "        #this should be changed vv\n",
     "        self.n_classes,self.n_examples,self.w,self.h = self.data[\"train\"].shape\n",
     "        self.n_val,self.n_ex_val,_,_ = self.data['val'].shape\n",
     "\n",
@@ -175,12 +171,12 @@
     "        \"\"\"Create pairs of test image, support set for testing N way one-shot learning. \"\"\"\n",
     "        X=self.data[s]\n",
     "        n_classes, n_examples = X.shape[0],X.shape[1]\n",
+    "        indices = rng.randint(0,self.n_examples,size=(N,))\n",
     "        if language is not None:\n",
     "            low, high = self.categories[s][language]\n",
     "            if N > high - low:\n",
     "                raise ValueError(\"This language ({}) has less than {} letters\".format(language, N))\n",
     "            categories = rng.choice(range(low,high),size=(N,),replace=False)\n",
-    "            indices = rng.randint(0,self.n_examples,size=(N,))\n",
     "            \n",
     "        else:#if no language specified just pick a bunch of random letters\n",
     "            categories = rng.choice(range(n_classes),size=(N,),replace=False)            \n",
@@ -212,16 +208,25 @@
     "            print(\"Got an average of {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
     "        return percent_correct\n",
     "\n",
-    "loader = Siamese_Loader(\"/home/soren/keras-oneshot\")\n"
+    "loader = Siamese_Loader(PATH)\n",
+    "print(\"!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def concat_images(X):\n",
@@ -254,7 +259,8 @@
     "    plt.show()\n",
     "#example of a one-shot learning task\n",
     "pairs, targets = loader.make_oneshot_task(20,\"train\",\"Japanese_(katakana)\")\n",
-    "plot_oneshot_task(pairs)\n"
+    "#plot_oneshot_task(pairs)\n",
+    "print(\"!\")"
    ]
   },
   {
@@ -267,22 +273,26 @@
    "outputs": [],
    "source": [
     "#Training loop\n",
-    "evaluate_every = 500 # interval for evaluating on one-shot tasks\n",
+    "print(\"!\")\n",
+    "evaluate_every = 1 # interval for evaluating on one-shot tasks\n",
     "loss_every=50 # interval for printing loss (iterations)\n",
-    "batch_size = 32 \n",
-    "n_iter = 900000 \n",
+    "batch_size = 32\n",
+    "n_iter = 90000\n",
     "N_way = 20 # how many classes for testing one-shot tasks>\n",
     "n_val = 250 #how mahy one-shot tasks to validate on?\n",
     "best = 9999\n",
-    "#siamese_net.load_weights(\"/home/soren/keras-oneshot/weights\")\n",
+    "weights_path = os.path.join(PATH, \"weights\")\n",
+    "print(\"training\")\n",
     "for i in range(1, n_iter):\n",
     "    (inputs,targets)=loader.get_batch(batch_size)\n",
     "    loss=siamese_net.train_on_batch(inputs,targets)\n",
+    "    print(loss)\n",
     "    if i % evaluate_every == 0:\n",
+    "        print(\"evaluating\")\n",
     "        val_acc = loader.test_oneshot(siamese_net,N_way,n_val,verbose=True)\n",
     "        if val_acc >= best:\n",
     "            print(\"saving\")\n",
-    "            siamese_net.save('/home/soren/keras-oneshot/weights')\n",
+    "            siamese_net.save(weights_path)\n",
     "            best=val_acc\n",
     "\n",
     "    if i % loss_every == 0:\n",
@@ -297,8 +307,9 @@
    },
    "outputs": [],
    "source": [
-    "def nearest_neighbour(pairs,targets):\n",
-    "    \"\"\"Quick function to classify a pair of images using 1 nearest neighbour\"\"\"\n",
+    "def nearest_neighbour_correct(pairs,targets):\n",
+    "    \"\"\"returns 1 if nearest neighbour gets the correct answer for a one-shot task\n",
+    "        given by (pairs, targets)\"\"\"\n",
     "    L2_distances = np.zeros_like(targets)\n",
     "    for i in range(len(targets)):\n",
     "        L2_distances[i] = np.sum(np.sqrt(pairs[0][i]**2 - pairs[1][i]**2))\n",
@@ -308,21 +319,23 @@
     "\n",
     "\n",
     "def test_nn_accuracy(N_ways,n_trials,loader):\n",
+    "    \"\"\"Returns accuracy of one shot \"\"\"\n",
     "    print(\"Evaluating nearest neighbour on {} unique {} way one-shot learning tasks ...\".format(n_trials,N_ways))\n",
     "\n",
     "    n_right = 0\n",
     "    \n",
     "    for i in range(n_trials):\n",
-    "        pairs,targets = loader.make_oneshot_task(N_ways,\"val\")\n",
-    "        correct = nearest_neighbour(pairs,targets)\n",
+    "        pairs,targets = der.make_oneshot_task(N_ways,\"val\")\n",
+    "        correct = nearest_neighbour_correct(pairs,targets)\n",
     "        n_right+= correct\n",
     "    return 100.0 * n_right / n_trials\n",
     "\n",
     "#training loop\n",
-    "siamese_net.load_weights(\"/home/soren/keras-oneshot/weights\")\n",
+    "\n",
+    "siamese_net.load_weights(weights_path)\n",
     "ways = np.arange(1,60,2)\n",
+    "resume =  False\n",
     "val_accs, train_accs,nn_accs = [],[],[]\n",
-    "print(\"?\")\n",
     "trials = 450\n",
     "for N in ways:\n",
     "    val_accs.append(loader.test_oneshot(siamese_net,N,trials,\"val\",verbose=True))\n",
