fixed bugs, improved layout

--- a/SiameseNet.ipynb
+++ b/SiameseNet.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "38951745"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,8 +37,9 @@
     "import os\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from sklearn.utils import shuffle\n",
-    "\n",
+    "%matplotlib inline\n",
     "def W_init(shape,name=None):\n",
     "    \"\"\"Initialize weights as in paper\"\"\"\n",
     "    values = rng.normal(loc=0,scale=1e-2,size=shape)\n",
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -96,9 +104,9 @@
      "output_type": "stream",
      "text": [
       "training alphabets\n",
-      "dict_keys(['Ojibwe_(Canadian_Aboriginal_Syllabics)', 'Cyrillic', 'Latin', 'Asomtavruli_(Georgian)', 'Alphabet_of_the_Magi', 'Armenian', 'Grantha', 'Japanese_(hiragana)', 'N_Ko', 'Japanese_(katakana)', 'Sanskrit', 'Anglo-Saxon_Futhorc', 'Malay_(Jawi_-_Arabic)', 'Tifinagh', 'Early_Aramaic', 'Bengali', 'Burmese_(Myanmar)', 'Futurama', 'Hebrew', 'Syriac_(Estrangelo)', 'Braille', 'Inuktitut_(Canadian_Aboriginal_Syllabics)', 'Balinese', 'Tagalog', 'Mkhedruli_(Georgian)', 'Blackfoot_(Canadian_Aboriginal_Syllabics)', 'Korean', 'Gujarati', 'Arcadian', 'Greek'])\n",
+      "dict_keys(['Hebrew', 'Ojibwe_(Canadian_Aboriginal_Syllabics)', 'Japanese_(katakana)', 'Arcadian', 'Asomtavruli_(Georgian)', 'Syriac_(Estrangelo)', 'Grantha', 'Tagalog', 'Gujarati', 'Tifinagh', 'Latin', 'Bengali', 'Inuktitut_(Canadian_Aboriginal_Syllabics)', 'Alphabet_of_the_Magi', 'Early_Aramaic', 'Braille', 'Korean', 'Greek', 'Futurama', 'Blackfoot_(Canadian_Aboriginal_Syllabics)', 'Anglo-Saxon_Futhorc', 'Mkhedruli_(Georgian)', 'Sanskrit', 'Malay_(Jawi_-_Arabic)', 'Cyrillic', 'Balinese', 'Burmese_(Myanmar)', 'Armenian', 'Japanese_(hiragana)', 'N_Ko'])\n",
       "validation alphabets:\n",
-      "dict_keys(['Atlantean', 'Sylheti', 'Angelic', 'Old_Church_Slavonic_(Cyrillic)', 'Manipuri', 'Oriya', 'Malayalam', 'Avesta', 'Syriac_(Serto)', 'Glagolitic', 'Aurek-Besh', 'ULOG', 'Keble', 'Ge_ez', 'Kannada', 'Gurmukhi', 'Mongolian', 'Tengwar', 'Tibetan', 'Atemayar_Qelisayer'])\n"
+      "dict_keys(['Sylheti', 'Ge_ez', 'Atlantean', 'Gurmukhi', 'Manipuri', 'Syriac_(Serto)', 'Avesta', 'Mongolian', 'Kannada', 'Oriya', 'Angelic', 'Old_Church_Slavonic_(Cyrillic)', 'Malayalam', 'Keble', 'Glagolitic', 'Tengwar', 'Atemayar_Qelisayer', 'ULOG', 'Aurek-Besh', 'Tibetan'])\n"
      ]
     }
    ],
@@ -119,17 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "!\n"
+      "loading data from /home/soren/Desktop/keras-oneshot/train.pickle\n",
+      "loading data from /home/soren/Desktop/keras-oneshot/val.pickle\n"
      ]
     }
    ],
@@ -140,38 +149,53 @@
     "        self.data = {}\n",
     "        self.categories = {}\n",
     "        self.info = {}\n",
+    "        \n",
     "        for name in data_subsets:\n",
-    "            with open(os.path.join(path, name+\".pickle\"),\"rb\") as f:\n",
+    "            file_path = os.path.join(path, name + \".pickle\")\n",
+    "            print(\"loading data from {}\".format(file_path))\n",
+    "            with open(file_path,\"rb\") as f:\n",
     "                (X,c) = pickle.load(f)\n",
     "                self.data[name] = X\n",
     "                self.categories[name] = c\n",
-    "        #this should be changed vv\n",
-    "        self.n_classes,self.n_examples,self.w,self.h = self.data[\"train\"].shape\n",
-    "        self.n_val,self.n_ex_val,_,_ = self.data['val'].shape\n",
     "\n",
-    "    def get_batch(self,n,s=\"train\"):\n",
+    "    def get_batch(self,batch_size,s=\"train\"):\n",
     "        \"\"\"Create batch of n pairs, half same class, half different class\"\"\"\n",
     "        X=self.data[s]\n",
-    "        categories = rng.choice(self.n_classes,size=(n,),replace=False)\n",
-    "        pairs=[np.zeros((n, self.h, self.w,1)) for i in range(2)]\n",
-    "        targets=np.zeros((n,))\n",
-    "        targets[n//2:] = 1\n",
-    "        for i in range(n):\n",
+    "        n_classes, n_examples, w, h = X.shape\n",
+    "\n",
+    "        #randomly sample several classes to use in the batch\n",
+    "        categories = rng.choice(n_classes,size=(batch_size,),replace=False)\n",
+    "        #initialize 2 empty arrays for the input image batch\n",
+    "        pairs=[np.zeros((batch_size, h, w,1)) for i in range(2)]\n",
+    "        #initialize vector for the targets, and make one half of it '1's, so 2nd half of batch has same class\n",
+    "        targets=np.zeros((batch_size,))\n",
+    "        targets[batch_size//2:] = 1\n",
+    "        for i in range(batch_size):\n",
     "            category = categories[i]\n",
-    "            idx_1 = rng.randint(0,self.n_examples)\n",
-    "            pairs[0][i,:,:,:] = X[category,idx_1].reshape(self.w,self.h,1)\n",
-    "            idx_2 = rng.randint(0,self.n_examples)\n",
+    "            idx_1 = rng.randint(0, n_examples)\n",
+    "            pairs[0][i,:,:,:] = X[category, idx_1].reshape(w, h, 1)\n",
+    "            idx_2 = rng.randint(0, n_examples)\n",
     "            #pick images of same class for 1st half, different for 2nd\n",
-    "            category_2 = category if i >= n//2 else (category + rng.randint(1,self.n_classes)) % self.n_classes\n",
-    "            pairs[1][i,:,:,:] = X[category_2,idx_2].reshape(self.w,self.h,1)\n",
+    "            if i >= batch_size // 2:\n",
+    "                category_2 = category  \n",
+    "            else: \n",
+    "                #add a random number to the category modulo n classes to ensure 2nd image has\n",
+    "                # ..different category\n",
+    "                category_2 = (category + rng.randint(1,n_classes)) % n_classes\n",
+    "            pairs[1][i,:,:,:] = X[category_2,idx_2].reshape(w, h,1)\n",
     "        return pairs, targets\n",
     "    \n",
+    "    def generate(self, batch_size, s=\"train\"):\n",
+    "        \"\"\"a generator for batches, so model.fit_generator can be used. \"\"\"\n",
+    "        while True:\n",
+    "            pairs, targets = self.get_batch(batch_size,s)\n",
+    "            yield (pairs, targets)    \n",
     "\n",
     "    def make_oneshot_task(self,N,s=\"val\",language=None):\n",
     "        \"\"\"Create pairs of test image, support set for testing N way one-shot learning. \"\"\"\n",
     "        X=self.data[s]\n",
-    "        n_classes, n_examples = X.shape[0],X.shape[1]\n",
-    "        indices = rng.randint(0,self.n_examples,size=(N,))\n",
+    "        n_classes, n_examples, w, h = X.shape\n",
+    "        indices = rng.randint(0,n_examples,size=(N,))\n",
     "        if language is not None:\n",
     "            low, high = self.categories[s][language]\n",
     "            if N > high - low:\n",
@@ -182,10 +206,10 @@
     "            categories = rng.choice(range(n_classes),size=(N,),replace=False)            \n",
     "        true_category = categories[0]\n",
     "        ex1, ex2 = rng.choice(n_examples,replace=False,size=(2,))\n",
-    "        test_image = np.asarray([X[true_category,ex1,:,:]]*N).reshape(N,self.w,self.h,1)\n",
+    "        test_image = np.asarray([X[true_category,ex1,:,:]]*N).reshape(N, w, h,1)\n",
     "        support_set = X[categories,indices,:,:]\n",
     "        support_set[0,:,:] = X[true_category,ex2]\n",
-    "        support_set = support_set.reshape(N,self.w,self.h,1)\n",
+    "        support_set = support_set.reshape(N, w, h,1)\n",
     "        targets = np.zeros((N,))\n",
     "        targets[0] = 1\n",
     "        targets, test_image, support_set = shuffle(targets, test_image, support_set)\n",
@@ -197,7 +221,7 @@
     "        \"\"\"Test average N way oneshot learning accuracy of a siamese neural net over k one-shot tasks\"\"\"\n",
     "        n_correct = 0\n",
     "        if verbose:\n",
-    "            print(\"Evaluating model on {} unique {} way one-shot learning tasks ...\".format(k,N))\n",
+    "            print(\"Evaluating model on {} random {} way one-shot learning tasks ...\".format(k,N))\n",
     "        for i in range(k):\n",
     "            inputs, targets = self.make_oneshot_task(N,s)\n",
     "            probs = model.predict(inputs)\n",
@@ -207,24 +231,33 @@
     "        if verbose:\n",
     "            print(\"Got an average of {}% {} way one-shot learning accuracy\".format(percent_correct,N))\n",
     "        return percent_correct\n",
-    "\n",
-    "loader = Siamese_Loader(PATH)\n",
-    "print(\"!\")"
+    "    \n",
+    "    def train(self, model, epochs, verbosity):\n",
+    "        model.fit_generator(self.generate(batch_size),\n",
+    "                            \n",
+    "                             )\n",
+    "    \n",
+    "    \n",
+    "#Instantiate the class\n",
+    "loader = Siamese_Loader(PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "!\n"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHEAAADnCAYAAAApQbmOAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAABvZJREFUeJztnUGW3CAMRHFe7n/lzoqEcbABIUFR\nXX+XzIwN/kjGoHZfn88nibP5tbsBYh5JJEASCZBEAiSRgN+Nn2vqisP19ANFIgGSSIAkEiCJBEgi\nAZJIgCQSIIkESCIBkkhAa9kthOv6uYKkjek5ICLxuq7/xIp+ICRmJNMGlMSMRI4BKTEliRzhakwq\nwmccLVma9PwFdz/x8/m8ilJEttkuMSORdmAkpiSRVqAkpiSRFuAkpiSRo0BKTKktUjL/ASsxJT1e\n9AItMSWJ7AFeotJmmy1bUbMoOn8CHYmKwj5gJT4JVBT+D6xE0Q+kREXhGJASa0jgM3ASNZkZB0qi\n0qgNKInCBoxERaEdGIk1JLAPaImiDwiJtVSqKOwHQqKYY7tEPRfOs11iDaXSMbZK1L3QB8hIFGNs\nk6go9AMmEiXQzhaJmpH6slyi0qg/MOlU2FkqUVEYgyKRgCOLh6M4NVMsi0TNSOPYmk5PGOUnsESi\nojCWcImn186cMAA1Oy04ZWDdCZV4ehRm0KMxTOKpAp/ahyzS5Tmxt4PoAk9F98QKp0WjJBKwTOJp\nqfSkaFQkvnDKwHOR2OrsKRfjVBSJBtBSarjE06PwhPaH7yeijVpGlE4JcJGoaNvLktmpiEXplIDQ\niQ1LhKLfLhSJBEgiAZLYAD2VpuQokeX+1wNaX10jMXeu9f1Pp3BCFKYUkE4Z5J2G7omDIA5SSRwA\nUWBK+lTUK6jS7igSCZBEAiSRAEkkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBEAiSRAEkkQBIJ\naO3sn1Hu9eUoEgmQRAIkkQBJJEASCZBEAiSRAEkkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBE\nAiSRgFaNzRmvj/gOHuudFIkvfO1rwa7rOqbzLNC92+2EAeTdRpg3SuWOeQyC67pev7Br90DL7ahh\naRuMxNz4mYtcXpjaRUKQl1K9Hbm9lv67S9yZzjwGwhOtfs2er2z7aPtDIhFlxM9QRkZK6/r0+XyG\nA8F1YuMVAVEz3N72lb/XeouypZ25f173RTeJniksX7hdqXmkH5Y+l3/TEtqD23dFRaSbnSKj8XxP\n+rTE6Cn7iMi3EY06GDxkTk1sVj1z9Z7jhK/FLQdT2Z6Ztpkkrp6xzWIdbFG3iJR+Zo3Z8wyn09ME\npoTZ1vvkZoar0cEfP0RZsmKjMzDmt6IksI7HhKlMsRa6JX6jQI9nuF6WT2y+hbedkJXnayGJBtCy\nksozCJBEAGbTsyQ+sGqZ7r7lZWH4njhyMrR7hxdPS2cW8trw0tlp78mmVyEGOmY5V886a2u/r+e8\nrX54PH9DzE5nOzL6t70lEB6ZpBwMUZkJQmIU94u3a923FrkeaTQTIhFliS5fKJRFe89F7xLYSPS8\n4JZjRVe35WPQ3BPveBZcWY8TGbX3QqzZ/uo50Yh3Ydj2QqkSlFqWyPvybJW6d7uG0umK1XuUSVEE\nb9dv2cP+yIk8VzVGiRoIHrPciHaFTWysM8LZTkZ+DmPmuJEZZvvs1CtivZ8FvTNJ6Gx3pFBKbEWf\n2WdGEgmQRAIkkQBJJGC7RK9VoN5ddpRlQU+2Pyd60buIvHtJb/va6S56O+5dy+L5rpnyb70XJoYX\nwHeP5FFmLlhUX73LRUwli+gi7xGE3N7lNTb3mpXW7+6iHOnIAr1wrzv1vnCoIqJ2SyzHhJ7Y7BC4\nsny/1jeId7t5MHrDr3W85zMOteOvGDRPoqy3gTCJlpmXdbZ2f0b0eDdMFD1l/T2/VzK0YtNKNZYG\n3P92psQQUV45EXy7LjNFzsNvz3j95YkiXbSL70nvfbZRMPZ4kOGdfc/C3pS45ZU4XDe/nf3d5fWn\nEtnXbbsY3yQwmu1bUWIeSSRAEgmQRAJgJTKWUUQBIfEUYajthFwAnyFyQ3jFmzAsuL6MaHfH7qsi\nva868TpXSuML/lvenuG55Nb7fz3nrP397Meoa9ReZzJzDo/M4ZZOR0ZVbe+v5/+ezls7Znku667K\n0x7l079ni7Gsg+H4e2JkRVoW2RooXoPEyvZvqFlRgjGTVnP7ogXOXIfpSEQtZKox2taeorDR8z8d\nd9mLF+7M7ORnVg0Ar0nOzMfAPaO5xCzxaYqd0v5HjSesk5zaMbzwyGRTXzNU4i0uuoTeSpkSZx/8\nvQaD+WE/9G0QgPfZWr89PlOx9GF/1XITksC3W0Tks+0o3RJ3FtWuZvQij9wnI4IB6mEfQWBKcWkx\napBCbEV9C1GDVBIJeE2nqJugKKy8Pm9RrEgkQBIJkEQCJJEASSRAEgmQRAIkkQBJJEASCZBEAiSR\nAEkkQBIJkEQCJJEASSRAEgmQRAJaL+gTB6BIJEASCZBEAiSRAEkkQBIJ+ANUadHyA8XI6QAAAABJ\nRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f157e85e5f8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -259,8 +292,7 @@
     "    plt.show()\n",
     "#example of a one-shot learning task\n",
     "pairs, targets = loader.make_oneshot_task(20,\"train\",\"Japanese_(katakana)\")\n",
-    "#plot_oneshot_task(pairs)\n",
-    "print(\"!\")"
+    "plot_oneshot_task(pairs)\n"
    ]
   },
   {
@@ -270,8 +302,19 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\n",
+      "training\n",
+      "8.25082"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "#Training loop\n",
     "print(\"!\")\n",
     "evaluate_every = 1 # interval for evaluating on one-shot tasks\n",
@@ -325,26 +368,25 @@
     "    n_right = 0\n",
     "    \n",
     "    for i in range(n_trials):\n",
-    "        pairs,targets = der.make_oneshot_task(N_ways,\"val\")\n",
+    "        pairs,targets = loader.make_oneshot_task(N_ways,\"val\")\n",
     "        correct = nearest_neighbour_correct(pairs,targets)\n",
-    "        n_right+= correct\n",
+    "        n_right += correct\n",
     "    return 100.0 * n_right / n_trials\n",
     "\n",
-    "#training loop\n",
     "\n",
-    "siamese_net.load_weights(weights_path)\n",
-    "ways = np.arange(1,60,2)\n",
+    "ways = np.arange(1, 60, 2)\n",
     "resume =  False\n",
-    "val_accs, train_accs,nn_accs = [],[],[]\n",
+    "val_accs, train_accs,nn_accs = [], [], []\n",
     "trials = 450\n",
     "for N in ways:\n",
-    "    val_accs.append(loader.test_oneshot(siamese_net,N,trials,\"val\",verbose=True))\n",
-    "    train_accs.append(loader.test_oneshot(siamese_net,N,trials,\"train\",verbose=True))\n",
-    "    nn_accs.append(test_nn_accuracy(N,trials,loader))\n",
-    "import seaborn as sns\n",
-    "plt.plot(ways,val_accs,\"m\")\n",
-    "plt.plot(ways,train_accs,\"y\")\n",
-    "plt.plot(ways,nn_accs,\"c\")\n",
+    "    val_accs.append(loader.test_oneshot(siamese_net, N,trials, \"val\", verbose=True))\n",
+    "    train_accs.append(loader.test_oneshot(siamese_net, N,trials, \"train\", verbose=True))\n",
+    "    nn_accs.append(test_nn_accuracy(N,trials, loader))\n",
+    "    \n",
+    "#plot the accuracy vs num categories for each\n",
+    "plt.plot(ways, val_accs, \"m\")\n",
+    "plt.plot(ways, train_accs, \"y\")\n",
+    "plt.plot(ways, nn_accs, \"c\")\n",
     "\n",
     "plt.plot(ways,100.0/ways,\"r\")\n",
     "plt.show()"
